--- a/docs/install.org
+++ b/docs/install.org
@@ -2,7 +2,7 @@
 #+AUTHOR: Cecília Carneiro e Silva - Laboratório de Inteligência Artificial
 #+DATE: setembro/2016
 
-* STM32F4-Discovery
+* PICOBIT
 
 ** Requisitos
 
@@ -35,6 +35,12 @@ $ sudo make install
 $ sudo apt-get install flex bison libgmp3-dev libmpfr-dev  libncurses5-dev libmpc-dev autoconf texinfo build-essential libftdi-dev
 $ sudo apt-get install libusb-1.0-0-dev
 $ sudo apt-get install lib32z1 lib32ncurses5
+#+END_SRC
+
+    GAWK:
+
+#+BEGIN_SRC shell
+$ sudo apt-get install gawk
 #+END_SRC
 
 *** Driver
