--- a/docs/relatorio.org
+++ b/docs/relatorio.org
@@ -280,6 +280,39 @@ The mark-and-sweep algorithm consists of two phases: In the first phase, it find
 * TODO Problemas
 
 - kconfig, não ta funcionando para o cortex-m3-CMSIS. Não gera o .config e o include/auto.conf correto, falta gcc e placa.
+Resolvido com:
+tirei o cortex-m3 do Kconfig, esta somente o cortex-m3-CMSIS
+
 - Arrumar o CMSIS.
+
+* ADC main using adc.h
+
+/*
+  int c=0;
+  ADC1->CR2  |= ADON;
+  while(c!=2)
+    c++;
+
+  ADC1->CR2  |= RSTCAL;
+  ADC1->CR2  |= CAL;
+  c=0;
+  while(c!=4)
+    c++;
+  
+  //while cal==set wait
+  
+  ADC1->CR2  |= EXTTRIG;
+  ADC1->CR2  |= EXTSEL(7);
+  
+  ADC1->CR2  |= CONT;
+
+  //temp
+  ADC1->CR2  |= TSVREFE;
+  
+  ADC1->SQR3 |= SQ1(16);
+
+  ADC1->CR2  |= SWSTART;
+  */
+  
 
 
