--- a/docs/relatorio.org
+++ b/docs/relatorio.org
@@ -283,3 +283,31 @@ The mark-and-sweep algorithm consists of two phases: In the first phase, it find
 - Arrumar o CMSIS.
 
 
+* ADC main using adc.h
+
+  /*
+  int c=0;
+  ADC1->CR2  |= ADON;
+  while(c!=2)
+    c++;
+
+  ADC1->CR2  |= RSTCAL;
+  ADC1->CR2  |= CAL;
+  c=0;
+  while(c!=4)
+    c++;
+  
+  //while cal==set wait
+  
+  ADC1->CR2  |= EXTTRIG;
+  ADC1->CR2  |= EXTSEL(7);
+  
+  ADC1->CR2  |= CONT;
+
+  //temp
+  ADC1->CR2  |= TSVREFE;
+  
+  ADC1->SQR3 |= SQ1(16);
+
+  ADC1->CR2  |= SWSTART;
+  */
