--- a/docs/relatorio.org
+++ b/docs/relatorio.org
@@ -2,6 +2,11 @@
 #+AUTHOR: Cecília Carneiro e Silva
 #+DATE:
 
+
+* TODO Where I am
+
+  
+
 * TEMA
 
   Maquina virtual em sitemas embacados
@@ -347,3 +352,116 @@ tirei o cortex-m3 do Kconfig, esta somente o cortex-m3-CMSIS
   */
 * Datasheet = en.CD00251732.pdf
 * Manual = en.CD00246267.pdf
+* Comparacao startup e linker
+
+- Startup
+  init.s =\= startup_stm32f10x_md_vl.s
+
+- linker
+
+  mto diferentes, no picobit nao tem o vetor de interrupção
+  areas diferentes
+
+
+* Comparacao stm32f10x.h(STM32F1) e stmf100xb.h(picobit)
+  
+- HSI_VALUE
+- HSE_VALUE
+- RESET
+- FLASH_ACR_PRFTBE
+- FLASH_ACR_LATENCY
+- FLASH_ACR_LATENCY_2
+- RCC_CFGR_PLLSRC_HSE
+
+* 6 RCC
+** 6.1 Reset
+
+  A STM32f100rb é 3 tipos de Reset, system Reset, power Reset and backup domain
+Reset.
+
+*** System reset
+
+   O reset do sistema coloca todos os registro em nivel de Reset, exceto as flags de reset.
+
+   A system reset is generated when one of the following events occurs:
+1. A low level on the NRST pin (external reset)
+2. Window watchdog end of count condition (WWDG reset)
+3. Independent watchdog end of count condition (IWDG reset)
+4. A software reset (SW reset) (see Software reset)
+5. Low-power management reset (see Low-power management reset)
+
+*** Power reset
+
+   A power reset is generated when one of the following events occurs:
+1. Power-on/power-down reset (POR/PDR reset)
+2. When exiting Standby mode
+
+A power reset sets all registers to their reset values except the Backup domain
+
+*** Backup domain reset
+
+   Reset somente os registros de backup.
+
+** 6.2 Clocks
+
+   Existem 3 diferentes fontes de clock que podem ser usadas como clock do sistema (SYSCLK), são elas:
+
+- HSI oscillator clock
+- HSE oscillator clock
+- PLL clock
+
+  Além desses, há também duas formas secundárias:
+
+- 40 kHz low speed internal, watchdog, auto-wakeup.
+- 32.768 kHz low external clock, real time
+
+== Figure 8. STM32F100xx clock tree (low and medium-density devices) - pag 71
+
+O clock da memoria flash é sempre o HSI.
+
+Clock máximo nos barramentos 24 MHz.
+
+*** 6.2.1 HSE clock
+
+    Pode vim de duas fontes:
+
+- HSE external cristal/ceramic resonator
+- HSE user external clock.
+  
+  Caso esteja interessado nessa opção buscar mais informações, pág 73.
+
+*** 6.2.2 HSI clock
+
+    É gerado por um oscilador RC de 8 MHz, pode ser usado diretamente como system clock, ou dividido por 2 para ser usado na entrado do PLL.
+
+    Essa fonte de clock tem vantagens como: 
+- low cost: não usa componentes externos
+- faster startup time: quando comparado ao HSE
+
+  Mas possue desvantagens:
+- mesmo calibrado é menos "correto" que um cristal externo ou um resonador de ceramica.
+
+*** 6.2.3 PLL
+
+    O PLL pode ser usado para multiplicar o HSI RC.
+
+OBS: The PLL output frequency must be in the range of 16-24 MHz.
+
+*** 6.2.4 LSE
+
+    O LSE é um cristal com frequencia de 32.768 kHz, tem a vantagem de prover um clock de baixa potência mas alta eficácia, proprio para real-time clock.
+
+*** 6.2.5 LSI
+
+    Low power clock que continua "batendo" no modo stop and standby, frequência por volta de 40 kHz.
+
+
+* HAL
+
+- vm/arch/arm/cortex-m3-HAL/Makefile = arch-config-arm-board (system_stm32f1xx.c)
+- vm/arch/arm/cortex-m3-HAL/include/stm32 = stm32f1xx.h
+
+
+
+
+ 
