--- a/docs/relatorio.org
+++ b/docs/relatorio.org
@@ -2,6 +2,10 @@
 #+AUTHOR: Cecília Carneiro e Silva
 #+DATE:
 
+* TODO FAZERRRR
+
+  Arrumar ou decode_int(return is uint16) ou arithmetic-sthif(fazer) descolar nos dois lados.
+
 * AVISO
   
   Erro no IF e no COND, caso tenha somente uma condição ele sempre entra.
